Fix for incorrect devmode label z-index

--- a/Sources/AnachronisticTechAPI/Public/static/styles/structure.css
+++ b/Sources/AnachronisticTechAPI/Public/static/styles/structure.css
@@ -198,7 +198,7 @@ button::-moz-focus-inner {
     background: red;
     font-weight: bold;
     font-family: monospace;
-    z-index: 1000;
+    z-index: 10000;
 }
 
 /* ---- */
